; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_subs.c_nfs4_ace_vfsflags_to_nfsflags.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_subs.c_nfs4_ace_vfsflags_to_nfsflags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KAUTH_ACE_FILE_INHERIT = common dso_local global i32 0, align 4
@NFS_ACE_FILE_INHERIT_ACE = common dso_local global i32 0, align 4
@KAUTH_ACE_DIRECTORY_INHERIT = common dso_local global i32 0, align 4
@NFS_ACE_DIRECTORY_INHERIT_ACE = common dso_local global i32 0, align 4
@KAUTH_ACE_LIMIT_INHERIT = common dso_local global i32 0, align 4
@NFS_ACE_NO_PROPAGATE_INHERIT_ACE = common dso_local global i32 0, align 4
@KAUTH_ACE_ONLY_INHERIT = common dso_local global i32 0, align 4
@NFS_ACE_INHERIT_ONLY_ACE = common dso_local global i32 0, align 4
@KAUTH_ACE_SUCCESS = common dso_local global i32 0, align 4
@NFS_ACE_SUCCESSFUL_ACCESS_ACE_FLAG = common dso_local global i32 0, align 4
@KAUTH_ACE_FAILURE = common dso_local global i32 0, align 4
@NFS_ACE_FAILED_ACCESS_ACE_FLAG = common dso_local global i32 0, align 4
@KAUTH_ACE_INHERITED = common dso_local global i32 0, align 4
@NFS_ACE_INHERITED_ACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs4_ace_vfsflags_to_nfsflags(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @KAUTH_ACE_FILE_INHERIT, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @NFS_ACE_FILE_INHERIT_ACE, align 4
  %10 = load i32, i32* %3, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @KAUTH_ACE_DIRECTORY_INHERIT, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i32, i32* @NFS_ACE_DIRECTORY_INHERIT_ACE, align 4
  %19 = load i32, i32* %3, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %12
  %22 = load i32, i32* %2, align 4
  %23 = load i32, i32* @KAUTH_ACE_LIMIT_INHERIT, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %21
  %27 = load i32, i32* @NFS_ACE_NO_PROPAGATE_INHERIT_ACE, align 4
  %28 = load i32, i32* %3, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %26, %21
  %31 = load i32, i32* %2, align 4
  %32 = load i32, i32* @KAUTH_ACE_ONLY_INHERIT, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load i32, i32* @NFS_ACE_INHERIT_ONLY_ACE, align 4
  %37 = load i32, i32* %3, align 4
  %38 = or i32 %37, %36
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %30
  %40 = load i32, i32* %2, align 4
  %41 = load i32, i32* @KAUTH_ACE_SUCCESS, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %48

44:                                               ; preds = %39
  %45 = load i32, i32* @NFS_ACE_SUCCESSFUL_ACCESS_ACE_FLAG, align 4
  %46 = load i32, i32* %3, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %44, %39
  %49 = load i32, i32* %2, align 4
  %50 = load i32, i32* @KAUTH_ACE_FAILURE, align 4
  %51 = and i32 %49, %50
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %57

53:                                               ; preds = %48
  %54 = load i32, i32* @NFS_ACE_FAILED_ACCESS_ACE_FLAG, align 4
  %55 = load i32, i32* %3, align 4
  %56 = or i32 %55, %54
  store i32 %56, i32* %3, align 4
  br label %57

57:                                               ; preds = %53, %48
  %58 = load i32, i32* %2, align 4
  %59 = load i32, i32* @KAUTH_ACE_INHERITED, align 4
  %60 = and i32 %58, %59
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %62, label %66

62:                                               ; preds = %57
  %63 = load i32, i32* @NFS_ACE_INHERITED_ACE, align 4
  %64 = load i32, i32* %3, align 4
  %65 = or i32 %64, %63
  store i32 %65, i32* %3, align 4
  br label %66

66:                                               ; preds = %62, %57
  %67 = load i32, i32* %3, align 4
  ret i32 %67
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
